Implemeted logging to mini-console, and all log entries saving to file. Added new color and new font.

--- a/NetworkInterfaceConfigurator/App.xaml
+++ b/NetworkInterfaceConfigurator/App.xaml
@@ -16,6 +16,7 @@
                 
                 <ResourceDictionary Source="Resources/Menu.xaml"/>
                 <ResourceDictionary Source="Resources/ComboBox.xaml"/>
+                <ResourceDictionary Source="Resources/DebugPanel.xaml"/>
                 <ResourceDictionary Source="Resources/Window.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
